crates/stef-build/tests/snapshots/compiler__compile@types-ref.stef.snap
---
source: crates/stef-build/tests/compiler.rs
expression: "struct Sample {\n    basic: Test123 @1,\n    with_generics: KeyValue<u32, bool> @2,\n}\n\nenum Test123 {\n    Value @1,\n}\n\nstruct KeyValue<K, V> {\n    key: K @1,\n    value: V @2,\n}"
input_file: crates/stef-parser/tests/inputs/types-ref.stef
---
#[allow(unused_imports)]
use ::stef::buf::{Decode, Encode};
#[derive(Clone, Debug, PartialEq)]
#[allow(clippy::module_name_repetitions, clippy::option_option)]
pub struct Sample {
    pub basic: Test123,
    pub with_generics: KeyValue<u32, bool>,
}
#[automatically_derived]
impl ::stef::Encode for Sample {
    #[allow(
        clippy::borrow_deref_ref,
        clippy::explicit_auto_deref,
        clippy::needless_borrow,
        clippy::too_many_lines,
    )]
    fn encode(&self, w: &mut impl ::stef::BufMut) {
        ::stef::buf::encode_field(
            w,
            1,
            |w| {
                (self.basic).encode(w);
            },
        );
        ::stef::buf::encode_field(
            w,
            2,
            |w| {
                (self.with_generics).encode(w);
            },
        );
        ::stef::buf::encode_u32(w, ::stef::buf::END_MARKER);
    }
}
#[automatically_derived]
impl ::stef::Decode for Sample {
    #[allow(clippy::type_complexity, clippy::too_many_lines)]
    fn decode(r: &mut impl ::stef::Buf) -> ::stef::buf::Result<Self> {
        let mut basic: Option<Test123> = None;
        let mut with_generics: Option<KeyValue<u32, bool>> = None;
        loop {
            match ::stef::buf::decode_id(r)? {
                ::stef::buf::END_MARKER => break,
                1 => basic = Some(Test123::decode(r)?),
                2 => with_generics = Some(KeyValue::decode(r)?),
                _ => continue,
            }
        }
        Ok(Self {
            basic: basic
                .ok_or(::stef::buf::Error::MissingField {
                    id: 1,
                    name: Some("basic"),
                })?,
            with_generics: with_generics
                .ok_or(::stef::buf::Error::MissingField {
                    id: 2,
                    name: Some("with_generics"),
                })?,
        })
    }
}
#[derive(Clone, Debug, PartialEq)]
#[allow(clippy::module_name_repetitions, clippy::option_option)]
pub enum Test123 {
    Value,
}
#[automatically_derived]
impl ::stef::Encode for Test123 {
    #[allow(
        clippy::borrow_deref_ref,
        clippy::semicolon_if_nothing_returned,
        clippy::too_many_lines,
    )]
    fn encode(&self, w: &mut impl ::stef::BufMut) {
        match self {
            Self::Value => {
                ::stef::buf::encode_id(w, 1);
            }
        }
    }
}
#[automatically_derived]
impl ::stef::Decode for Test123 {
    #[allow(clippy::too_many_lines)]
    fn decode(r: &mut impl ::stef::Buf) -> ::stef::buf::Result<Self> {
        match ::stef::buf::decode_id(r)? {
            1 => Ok(Self::Value),
            id => Err(::stef::buf::Error::UnknownVariant(id)),
        }
    }
}
#[derive(Clone, Debug, PartialEq)]
#[allow(clippy::module_name_repetitions, clippy::option_option)]
pub struct KeyValue<K, V> {
    pub key: K,
    pub value: V,
}
#[automatically_derived]
impl<K, V> ::stef::Encode for KeyValue<K, V>
where
    K: ::stef::buf::Encode,
    V: ::stef::buf::Encode,
{
    #[allow(
        clippy::borrow_deref_ref,
        clippy::explicit_auto_deref,
        clippy::needless_borrow,
        clippy::too_many_lines,
    )]
    fn encode(&self, w: &mut impl ::stef::BufMut) {
        ::stef::buf::encode_field(
            w,
            1,
            |w| {
                (self.key).encode(w);
            },
        );
        ::stef::buf::encode_field(
            w,
            2,
            |w| {
                (self.value).encode(w);
            },
        );
        ::stef::buf::encode_u32(w, ::stef::buf::END_MARKER);
    }
}
#[automatically_derived]
impl<K, V> ::stef::Decode for KeyValue<K, V>
where
    K: ::std::fmt::Debug + ::stef::buf::Decode,
    V: ::std::fmt::Debug + ::stef::buf::Decode,
{
    #[allow(clippy::type_complexity, clippy::too_many_lines)]
    fn decode(r: &mut impl ::stef::Buf) -> ::stef::buf::Result<Self> {
        let mut key: Option<K> = None;
        let mut value: Option<V> = None;
        loop {
            match ::stef::buf::decode_id(r)? {
                ::stef::buf::END_MARKER => break,
                1 => key = Some(K::decode(r)?),
                2 => value = Some(V::decode(r)?),
                _ => continue,
            }
        }
        Ok(Self {
            key: key
                .ok_or(::stef::buf::Error::MissingField {
                    id: 1,
                    name: Some("key"),
                })?,
            value: value
                .ok_or(::stef::buf::Error::MissingField {
                    id: 2,
                    name: Some("value"),
                })?,
        })
    }
}

